@@ -50,70 +50,70 @@ L1Topo::getDecisionAndOverflowBits:      L1Topo TOB:  ctp_signal 0x1 ( index 1 c
  index 8 updated decision 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000100000000
  index 8 updated overflow 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001000000001
 L1Topo::getDecisionAndOverflowBits:      L1Topo TOB:  ctp_signal 0x2 ( index 0 clock 1 fpga 0 ) overflow bits 0b00000011 trigger bits 0b00110000
- index 32 updated decision 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000011000000000000000000000000000100000000
- index 32 updated overflow 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001100000000000000000000001000000001
+ index 16 updated decision 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001100000000000100000000
+ index 16 updated overflow 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000110000001000000001
 L1Topo::getDecisionAndOverflowBits:      L1Topo TOB:  ctp_signal 0x3 ( index 1 clock 1 fpga 0 ) overflow bits 0b00000100 trigger bits 0b00000010
- index 40 updated decision 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000100011000000000000000000000000000100000000
- index 40 updated overflow 00000000000000000000000000000000000000000000000000000000000000000000000000000000000001000000001100000000000000000000001000000001
+ index 24 updated decision 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000010001100000000000100000000
+ index 24 updated overflow 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000100000000110000001000000001
 L1Topo::getDecisionAndOverflowBits:      L1Topo TOB:  ctp_signal 0x4 ( index 0 clock 0 fpga 1 ) overflow bits 0b00000101 trigger bits 0b00010000
- index 16 updated decision 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000100011000000000000000100000000000100000000
- index 16 updated overflow 00000000000000000000000000000000000000000000000000000000000000000000000000000000000001000000001100000000000001010000001000000001
+ index 32 updated decision 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001000000000010001100000000000100000000
+ index 32 updated overflow 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000010100000100000000110000001000000001
 L1Topo::getDecisionAndOverflowBits:      L1Topo TOB:  ctp_signal 0x5 ( index 1 clock 0 fpga 1 ) overflow bits 0b00000110 trigger bits 0b11110110
- index 24 updated decision 00000000000000000000000000000000000000000000000000000000000000000000000000000000000000100011000011110110000100000000000100000000
- index 24 updated overflow 00000000000000000000000000000000000000000000000000000000000000000000000000000000000001000000001100000110000001010000001000000001
+ index 40 updated decision 00000000000000000000000000000000000000000000000000000000000000000000000000000000111101100001000000000010001100000000000100000000
+ index 40 updated overflow 00000000000000000000000000000000000000000000000000000000000000000000000000000000000001100000010100000100000000110000001000000001
 L1Topo::getDecisionAndOverflowBits:      L1Topo TOB:  ctp_signal 0x6 ( index 0 clock 1 fpga 1 ) overflow bits 0b00000111 trigger bits 0b10110000
- index 48 updated decision 00000000000000000000000000000000000000000000000000000000000000000000000010110000000000100011000011110110000100000000000100000000
- index 48 updated overflow 00000000000000000000000000000000000000000000000000000000000000000000000000000111000001000000001100000110000001010000001000000001
+ index 48 updated decision 00000000000000000000000000000000000000000000000000000000000000000000000010110000111101100001000000000010001100000000000100000000
+ index 48 updated overflow 00000000000000000000000000000000000000000000000000000000000000000000000000000111000001100000010100000100000000110000001000000001
 L1Topo::getDecisionAndOverflowBits:      L1Topo TOB:  ctp_signal 0x7 ( index 1 clock 1 fpga 1 ) overflow bits 0b00001000 trigger bits 0b00000000
- index 56 updated decision 00000000000000000000000000000000000000000000000000000000000000000000000010110000000000100011000011110110000100000000000100000000
- index 56 updated overflow 00000000000000000000000000000000000000000000000000000000000000000000100000000111000001000000001100000110000001010000001000000001
+ index 56 updated decision 00000000000000000000000000000000000000000000000000000000000000000000000010110000111101100001000000000010001100000000000100000000
+ index 56 updated overflow 00000000000000000000000000000000000000000000000000000000000000000000100000000111000001100000010100000100000000110000001000000001
 L1Topo::getDecisionAndOverflowBits: number of data words 8
 L1Topo::getDecisionAndOverflowBits:      L1Topo TOB:  ctp_signal 0x0 ( index 0 clock 0 fpga 0 ) overflow bits 0b00010000 trigger bits 0b11010001
- index 64 updated decision 00000000000000000000000000000000000000000000000000000000110100010000000010110000000000100011000011110110000100000000000100000000
- index 64 updated overflow 00000000000000000000000000000000000000000000000000000000000100000000100000000111000001000000001100000110000001010000001000000001
+ index 64 updated decision 00000000000000000000000000000000000000000000000000000000110100010000000010110000111101100001000000000010001100000000000100000000
+ index 64 updated overflow 00000000000000000000000000000000000000000000000000000000000100000000100000000111000001100000010100000100000000110000001000000001
 L1Topo::getDecisionAndOverflowBits:      L1Topo TOB:  ctp_signal 0x1 ( index 1 clock 0 fpga 0 ) overflow bits 0b00100000 trigger bits 0b10101011
- index 72 updated decision 00000000000000000000000000000000000000000000000010101011110100010000000010110000000000100011000011110110000100000000000100000000
- index 72 updated overflow 00000000000000000000000000000000000000000000000000100000000100000000100000000111000001000000001100000110000001010000001000000001
+ index 72 updated decision 00000000000000000000000000000000000000000000000010101011110100010000000010110000111101100001000000000010001100000000000100000000
+ index 72 updated overflow 00000000000000000000000000000000000000000000000000100000000100000000100000000111000001100000010100000100000000110000001000000001
 L1Topo::getDecisionAndOverflowBits:      L1Topo TOB:  ctp_signal 0x2 ( index 0 clock 1 fpga 0 ) overflow bits 0b00110000 trigger bits 0b00000010
- index 96 updated decision 00000000000000000000000000000010000000000000000010101011110100010000000010110000000000100011000011110110000100000000000100000000
- index 96 updated overflow 00000000000000000000000000110000000000000000000000100000000100000000100000000111000001000000001100000110000001010000001000000001
+ index 80 updated decision 00000000000000000000000000000000000000000000001010101011110100010000000010110000111101100001000000000010001100000000000100000000
+ index 80 updated overflow 00000000000000000000000000000000000000000011000000100000000100000000100000000111000001100000010100000100000000110000001000000001
 L1Topo::getDecisionAndOverflowBits:      L1Topo TOB:  ctp_signal 0x3 ( index 1 clock 1 fpga 0 ) overflow bits 0b01000000 trigger bits 0b00101000
- index 104 updated decision 00000000000000000010100000000010000000000000000010101011110100010000000010110000000000100011000011110110000100000000000100000000
- index 104 updated overflow 00000000000000000100000000110000000000000000000000100000000100000000100000000111000001000000001100000110000001010000001000000001
+ index 88 updated decision 00000000000000000000000000000000001010000000001010101011110100010000000010110000111101100001000000000010001100000000000100000000
+ index 88 updated overflow 00000000000000000000000000000000010000000011000000100000000100000000100000000111000001100000010100000100000000110000001000000001
 L1Topo::getDecisionAndOverflowBits:      L1Topo TOB:  ctp_signal 0x4 ( index 0 clock 0 fpga 1 ) overflow bits 0b01010000 trigger bits 0b00000000
- index 80 updated decision 00000000000000000010100000000010000000000000000010101011110100010000000010110000000000100011000011110110000100000000000100000000
- index 80 updated overflow 00000000000000000100000000110000000000000101000000100000000100000000100000000111000001000000001100000110000001010000001000000001
+ index 96 updated decision 00000000000000000000000000000000001010000000001010101011110100010000000010110000111101100001000000000010001100000000000100000000
+ index 96 updated overflow 00000000000000000000000001010000010000000011000000100000000100000000100000000111000001100000010100000100000000110000001000000001
 L1Topo::getDecisionAndOverflowBits:      L1Topo TOB:  ctp_signal 0x5 ( index 1 clock 0 fpga 1 ) overflow bits 0b01100000 trigger bits 0b10000011
- index 88 updated decision 00000000000000000010100000000010100000110000000010101011110100010000000010110000000000100011000011110110000100000000000100000000
- index 88 updated overflow 00000000000000000100000000110000011000000101000000100000000100000000100000000111000001000000001100000110000001010000001000000001
+ index 104 updated decision 00000000000000001000001100000000001010000000001010101011110100010000000010110000111101100001000000000010001100000000000100000000
+ index 104 updated overflow 00000000000000000110000001010000010000000011000000100000000100000000100000000111000001100000010100000100000000110000001000000001
 L1Topo::getDecisionAndOverflowBits:      L1Topo TOB:  ctp_signal 0x6 ( index 0 clock 1 fpga 1 ) overflow bits 0b01110000 trigger bits 0b01000101
- index 112 updated decision 00000000010001010010100000000010100000110000000010101011110100010000000010110000000000100011000011110110000100000000000100000000
- index 112 updated overflow 00000000011100000100000000110000011000000101000000100000000100000000100000000111000001000000001100000110000001010000001000000001
+ index 112 updated decision 00000000010001011000001100000000001010000000001010101011110100010000000010110000111101100001000000000010001100000000000100000000
+ index 112 updated overflow 00000000011100000110000001010000010000000011000000100000000100000000100000000111000001100000010100000100000000110000001000000001
 L1Topo::getDecisionAndOverflowBits:      L1Topo TOB:  ctp_signal 0x7 ( index 1 clock 1 fpga 1 ) overflow bits 0b10000000 trigger bits 0b01111001
- index 120 updated decision 01111001010001010010100000000010100000110000000010101011110100010000000010110000000000100011000011110110000100000000000100000000
- index 120 updated overflow 10000000011100000100000000110000011000000101000000100000000100000000100000000111000001000000001100000110000001010000001000000001
+ index 120 updated decision 01111001010001011000001100000000001010000000001010101011110100010000000010110000111101100001000000000010001100000000000100000000
+ index 120 updated overflow 10000000011100000110000001010000010000000011000000100000000100000000100000000111000001100000010100000100000000110000001000000001
 Trigger decision bits:
-  ref 01111001010001010010100000000010100000110000000010101011110100010000000010110000000000100011000011110110000100000000000100000000
- test 01111001010001010010100000000010100000110000000010101011110100010000000010110000000000100011000011110110000100000000000100000000
+  ref 01111001010001011000001100000000001010000000001010101011110100010000000010110000111101100001000000000010001100000000000100000000
+ test 01111001010001011000001100000000001010000000001010101011110100010000000010110000111101100001000000000010001100000000000100000000
 Trigger overflow bits:
-  ref 10000000011100000100000000110000011000000101000000100000000100000000100000000111000001000000001100000110000001010000001000000001
- test 10000000011100000100000000110000011000000101000000100000000100000000100000000111000001000000001100000110000001010000001000000001
+  ref 10000000011100000110000001010000010000000011000000100000000100000000100000000111000001100000010100000100000000110000001000000001
+ test 10000000011100000110000001010000010000000011000000100000000100000000100000000111000001100000010100000100000000110000001000000001
 ** test10: L1Topo::triggerBitIndex **
 size of unsigned long 8 size of uint32_t 4
 module, ROIword, (index clock fpga), index, multiple of 8?
 0 0x0x80000000 ( 0 0 0 ) -> 0 true
 0 0x0x81000000 ( 1 0 0 ) -> 8 true
-0 0x0x82000000 ( 0 1 0 ) -> 32 true
-0 0x0x83000000 ( 1 1 0 ) -> 40 true
-0 0x0x84000000 ( 0 0 1 ) -> 16 true
-0 0x0x85000000 ( 1 0 1 ) -> 24 true
+0 0x0x82000000 ( 0 1 0 ) -> 16 true
+0 0x0x83000000 ( 1 1 0 ) -> 24 true
+0 0x0x84000000 ( 0 0 1 ) -> 32 true
+0 0x0x85000000 ( 1 0 1 ) -> 40 true
 0 0x0x86000000 ( 0 1 1 ) -> 48 true
 0 0x0x87000000 ( 1 1 1 ) -> 56 true
 1 0x0x80000000 ( 0 0 0 ) -> 64 true
 1 0x0x81000000 ( 1 0 0 ) -> 72 true
-1 0x0x82000000 ( 0 1 0 ) -> 96 true
-1 0x0x83000000 ( 1 1 0 ) -> 104 true
-1 0x0x84000000 ( 0 0 1 ) -> 80 true
-1 0x0x85000000 ( 1 0 1 ) -> 88 true
+1 0x0x82000000 ( 0 1 0 ) -> 80 true
+1 0x0x83000000 ( 1 1 0 ) -> 88 true
+1 0x0x84000000 ( 0 0 1 ) -> 96 true
+1 0x0x85000000 ( 1 0 1 ) -> 104 true
 1 0x0x86000000 ( 0 1 1 ) -> 112 true
 1 0x0x87000000 ( 1 1 1 ) -> 120 true
